--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -1139,6 +1139,10 @@ en:
     new_conversations: New Conversation
     results_search: Search
 
+  search:
+    placeholder: "Search all projects"
+    placeholder_in_project: "Search in project"
+
   number:
     # Used in number_with_delimiter()
     # These are also the defaults for 'currency', 'percentage', 'precision', and 'human'
