--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -422,6 +422,7 @@ en:
       title: Recent conversations
       view_all: View all conversations
       new: "+ New conversation"
+      first: "+ Create a first conversation"
     fields:
       tracks_time: "Enable time tracking. <em>Will allow users to log time for tasks.</em>"
       archiving: "Archive this project"
