Refactoring helpers and views, using new Rails format for #render
Moving RJS helpers to their own file
Tidying layouts

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -421,7 +421,7 @@ en:
       title: Recent conversations
       view_all: View all conversations
       new: "+ New conversation"
-      first: "+ Create a first conversation"
+      first: "+ Create the first conversation"
     fields:
       tracks_time: "Enable time tracking. <em>Will allow users to log time for tasks.</em>"
       archiving: "Archive this project"
